# open-food-today

./: .gitignore  README.md  commit.sh  compose.yaml  setup.sh
crawler/: README.md  package.json
crawler/src/vnexpress/: README.md  exportToCSV.ts  index.ts  recipeCrawler.ts  updateDishLinks.ts
crawler/src/vnexpress/data/: all_recipes.json  bn_c.json  bn_riu_cua.json  bnh_c.json  c_kho.json  ch_bi.json  ch_c.json  cm_rang.json  gi_cy.json  gi_g.json  kim_chi.json  lu_b.json  lu_c.json  lu_cho.json  lu_g.json  lu_thi.json  pate.json  ph_b.json  ph_cun.json  ph_g.json  recipes.json  recipes_export.csv  tht_kho_mng.json  tht_kho_tiu.json  tht_kho_trng.json  tht_kho_tu.json  tht_kho_u_ph.json  trng_chin.json  trng_g_nng.json  xu_mi.json
crawler/src/vnexpress/data/recipes/: 3696926.json  3775797.json  4298408.json  4298409.json  4298425.json  4298426.json  4298429.json  4298433.json  4298440.json  4298461.json  4298486.json  4298516.json  4298541.json  4298553.json  4309488.json  4311050.json  4311085.json  4311087.json  4311111.json  4311189.json  4311241.json  4311262.json  4311283.json  4311307.json  4311356.json  4311485.json  4311524.json  4325154.json  4327209.json  4331755.json  4342583.json  4350050.json  4351109.json  4354886.json  4354889.json  4372999.json  4376837.json  4377241.json  4381904.json  4385509.json  (+54 more)
server/: Cargo.toml  test.sh
server/.cargo/: config.toml
server/common/: Cargo.toml
server/common-test/: Cargo.toml
server/common-test/src/: auth.rs  lib.rs  request.rs  response.rs
server/common/src/: app_error.rs  auth_utils.rs  dto.rs  env.rs  lib.rs  middlewares.rs
server/endpoint/: Cargo.toml
server/entrypoint/: Cargo.toml  Dockerfile
server/entrypoint/src/: main.rs
server/features/recipe-comments/: Cargo.toml
server/features/recipe-comments-models/: Cargo.toml
server/features/recipe-comments-models/src/: dto.rs  entity.rs
server/features/recipe-comments/src/: handler.rs  lib.rs  repo.rs  router.rs  state.rs
server/features/recipe-comments/tests/: comments.rs  common.rs
server/features/recipe-likes/: Cargo.toml
server/features/recipe-likes-models/: Cargo.toml
server/features/recipe-likes-models/src/: dto.rs  entity.rs
server/features/recipe-likes/src/: handler.rs  lib.rs  repo.rs  router.rs  state.rs
server/features/recipe-likes/tests/: common.rs  likes.rs
server/features/recipes/: Cargo.toml
server/features/recipes-models/: Cargo.toml
server/features/recipes-models/src/: entity.rs
server/features/recipes/src/: handler.rs  lib.rs  repo.rs  router.rs
server/features/recipes/tests/: get_random_recipe.rs  get_recipes.rs  recipes_handlers.rs
server/migrate/: Cargo.toml
server/migrate/migrations/: 001_recipes.sql  002_recipe_comments.sql  003_recipe_likes.sql
server/migrate/src/: down.rs  lib.rs  main.rs  up.rs
server/recipes/: Cargo.toml
server/recipes-models/: Cargo.toml
server/recipes-models/src/: entity.rs
server/recipes/src/: lib.rs  router.rs  state.rs
web-client/: package.json  svelte.config.js  vite.config.ts  wrangler.toml
web-client/src/: app.d.ts  hooks.client.ts  hooks.server.ts
web-client/src/lib/: error.ts
web-client/src/lib/api/: comments.ts  config.ts  http.ts  likes.ts  recipes.ts
web-client/src/lib/caches/: cache.ts  persist_cache_storage.ts  session_cache_storage.ts  types.d.ts
web-client/src/lib/components/: AppSettingsButton.svelte  AppSettingsDialog.svelte  CommentCard.svelte  LoginDialog.svelte  LoginForm.svelte  OpenLoginDialogButton.svelte
web-client/src/lib/i18n/: en-US.ts  index.ts  vi-VN.ts
web-client/src/lib/stores/: layout.svelte.ts
web-client/src/lib/ts-binding/: common.d.ts  recipe_comments.d.ts  recipe_likes.d.ts  recipes.d.ts
web-client/src/routes/: +layout.svelte  +page.svelte
web-client/src/routes/(home)/: +page.server.ts  +page.svelte
web-client/src/routes/auth/auth-code-error/: +page.svelte
web-client/src/routes/auth/callback/: +server.ts
web-client/src/styles/: celar-components.scss  index.scss  utils.scss
web-client/static/: privacy-policy.txt  terms-of-service.txt
