[package]
name = "common-test"
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
axum = "0.8.4"
color-eyre = "0.6.4"
eyre = "0.6.12"
http-body-util = "0.1.3"
serde = "1.0.219"
serde_json = "1.0.140"
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
urlencoding = "2.1.3"
