[package]
name = "entrypoint"
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
axum = "0.8.4"
color-eyre = "0.6.4"
common = { version = "0.1.0", path = "../common" }
eyre = "0.6.12"
recipes = { version = "0.1.0", path = "../features/recipes" }
recipe-comments = { version = "0.1.0", path = "../features/recipe-comments" }
recipe-likes = { version = "0.1.0", path = "../features/recipe-likes" }
tokio = { version = "1.45.0", features = ["rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
