[package]
name = "migrate"
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true
default-run = "up"

[dependencies]
color-eyre = "0.6.4"
common = { version = "0.1.0", path = "../common" }
eyre = "0.6.12"
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[[bin]]
name = "up"
path = "src/up.rs"

[[bin]]
name = "down"
path = "src/down.rs"
